Fix: added loading occuring on index.html template page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -92,10 +92,11 @@
                   alt="La Bonne Alternance est un site de Pôle Emploi" title="La Bonne Alternance est un site de Pôle Emploi"></a></header>
             <main>
               <section class="main-landing">
-                <h2 class="introduction"><span>Trouvez ici les <strong><span class="no-break-word bold">63 000</span>
-                      entreprises</strong></span><br><span>qui recrutent <strong>régulièrement</strong> en alternance</span></h2>
-                <div class="button-container"><a class="button" title="Commencer à chercher" href="/recherche">C'est
-                    parti !</a></div>
+                <h2 class="introduction"><span>Trouvez ici les <strong><span class="no-break-word bold">63 000</span> entreprises</strong></span><br><span>qui
+                    recrutent <strong>régulièrement</strong> en alternance</span></h2>
+                <div class="button-container">
+                  <div class="loading-dotted">Chargement en cours</div>
+                </div>
                 <div class="recruiter"><a href="https://labonneboite.pole-emploi.fr/informations-entreprise?origin=labonnealternance">Accès
                     recruteur</a></div>
                 <div class="footer">
