Add a polyfill for handling fetch method in old browser
FF38 (and below), Edg13 (and below) and IE doesn't handle the fetch() method resulting in a JS error... We add this polyfill to handle this case.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -47,7 +47,9 @@
   <!-- Lazysizes -->
   <script src="/static/js/lazysizes.min.js" async=""></script>
 
-  <!-- For IE (not Edge), we include a polyfill to support recent JS functions -->
+  <!-- fetch polyfill -->
+  <script src="https://unpkg.com/unfetch/polyfill"></script>
+  <!-- For IE (not Edge), we include polyfills to support recent JS functions -->
   <script type="text/javascript">
     var ua = window.navigator.userAgent;
     // MSIE : IE6 -> 10 & Trident: IE 11
