--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,22 +19,22 @@
 
   <!-- SEO Values -->
   <meta name="keywords" content="contrat offres alternance">
-  <meta name="description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les 63 000 entreprises qui recrutent régulièrement en alternance">
+  <meta name="description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les entreprises qui recrutent régulièrement en alternance">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="https://labonnealternance.pole-emploi.fr">
   <meta name="twitter:title" content="La Bonne Alternance">
-  <meta name="twitter:description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les 63 000 entreprises qui recrutent régulièrement en alternance">
+  <meta name="twitter:description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les entreprises qui recrutent régulièrement en alternance">
   <meta name="twitter:image:src" content="https://labonnealternance.pole-emploi.fr/static/img/fd-desktop.jpg">
 
   <!-- Open Graph data for facebook -->
   <meta property="og:site_name" content="La Bonne Alternance">
-  <meta property="og:title" content="La Bonne Alternance - Trouvez ici les 63 000 entreprises qui recrutent régulièrement en alternance">
+  <meta property="og:title" content="La Bonne Alternance - Trouvez ici les entreprises qui recrutent régulièrement en alternance">
   <meta property="og:type" content="site">
   <meta property="og:url" content="https://labonnealternance.pole-emploi.fr">
   <meta property="og:image" content="https://labonnealternance.pole-emploi.fr/static/img/fd-desktop.jpg">
-  <meta property="og:description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les 63 000 entreprises qui recrutent régulièrement en alternance">
+  <meta property="og:description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les entreprises qui recrutent régulièrement en alternance">
 
   <!--
     manifest.json provides metadata used when your web app is added to the
