Display a part of the index.html template as landing page
Currently, we create a index.html which prerender all the home page; but its slows down the display of the final page with extra download and parsing.
To avoid that, we only display the top part of the home page in other page than the home page.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -116,6 +116,7 @@
                   </ul>
                 </div>
               </section>
+              {% if render_complete_home %}
               <section class="more">
                 <div class="how-it-works max-size-1000">
                   <h2 class="big">Comment ça marche ?</h2>
@@ -213,6 +214,7 @@
                   </div>
                 </footer>
               </section>
+              {% endif %}
             </main>
           </div>
         </div>
