--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
 
+  <link rel="canonical" href="{{ canonical }}" >
+
   <!-- Meta SEO -->
   <meta id="robots-meta" name="robots" content="index, follow">
 
