Remove extra texte

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -95,8 +95,7 @@
                   alt="La Bonne Alternance est un site de Pôle Emploi" title="La Bonne Alternance est un site de Pôle Emploi"></a></header>
             <main>
               <section class="main-landing">
-                <h1 class="introduction"><span>Trouvez ici les <strong><span class="no-break-word bold">63 000</span>
-                      entreprises</strong></span><br><span>qui
+                <h1 class="introduction"><span>Trouvez ici les entreprises</span><br><span>qui
                     recrutent <strong>régulièrement</strong> en alternance</span></h1>
                 <div class="button-container">
                   <div class="loading-dotted">Chargement en cours</div>
