--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -130,11 +130,11 @@
                     <p>7 employeurs sur 10 recrutent sans déposer d’offres d’emploi. <br>Il est essentiel dans votre
                       recherche de proposer <br>votre candidature à des entreprises n’ayant pas <br>forcément déposé
                       d’offres d’emploi en alternance.</p>
-                    <div class="recruteurs"><img class="lazyload" data-src="/static/img/how-it-works/home-recruteurs.svg"
+                    <div class="recruteurs"><img src="/static/s.png" class="lazyload" data-src="/static/img/how-it-works/home-recruteurs.svg"
                         alt=""></div>
                   </div>
                   <div class="img-left">
-                    <div class="diagramme"><img class="lazyload" data-src="/static/img/how-it-works/home-diagramme.svg"
+                    <div class="diagramme"><img src="/static/s.png" class="lazyload" data-src="/static/img/how-it-works/home-diagramme.svg"
                         alt=""></div>
                     <p>Notre algorithme La Bonne Alternance analyse les offres et les <br>recrutements des 5 dernières
                       années pour vous proposer les <br>entreprises qui recrutent régulièrement en alternance (contrat
@@ -145,7 +145,7 @@
                       pouvez affiner la liste des entreprises par <br>taille, métier et domaine. En cliquant sur une
                       entreprise, vous <br>accédez à sa description, à ses coordonnées ainsi qu'à des conseils pour
                       postuler.</p>
-                    <div class="map"><img class="lazyload" data-src="/static/img/how-it-works/home-map.svg" alt=""></div>
+                    <div class="map"><img src="/static/s.png" class="lazyload" data-src="/static/img/how-it-works/home-map.svg" alt=""></div>
                   </div>
                   <div class="text-center go-container">
                     <p>Maximisez vos chances ! Postulez auprès des entreprises qui recrutent régulièrement <br>en
@@ -158,7 +158,7 @@
                 <div class="who-we-are max-size-1200">
                   <h2 class="big">Qui sommes-nous ?</h2>
                   <div><a class="logo-pe" href="https://www.pole-emploi.fr/" target="_blank" rel="noopener noreferrer"
-                      title="Ouverture dans une nouvelle fenêtre"><img class="lazyload img-responsive" data-src="/static/img/logo/pole-emploi-couleur.svg"
+                      title="Ouverture dans une nouvelle fenêtre"><img src="/static/s.png" class="lazyload img-responsive" data-src="/static/img/logo/pole-emploi-couleur.svg"
                         alt="La Bonne Alternance est un site de Pôle Emploi" title="La Bonne Alternance est un site de Pôle Emploi"></a>
                     <p>Pôle Emploi innove et propose ce service pour vous permettre de trouver plus facilement des
                       entreprises proposant régulièrement des contrats en alternance. La Bonne Alternance est une
@@ -168,20 +168,20 @@
                 </div>
                 <div id="other-startups" class="clearfix">
                   <h2>D'autres services digitaux proposés par Pôle Emploi</h2>
-                  <div><a href="https://labonneboite.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-boite"><img
+                  <div><a href="https://labonneboite.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-boite"><img src="/static/s.png"
                         class="lazyload" data-src="/static/img/startups/la_bonne_boite.png" alt="La Bonne Boite"><span>Trouvez
                         les entreprises qui embauchent sans déposer d’offres d’emploi !</span></a><a href="https://labonneformation.pole-emploi.fr"
-                      target="_blank" rel="noopener noreferrer" class="la-bonne-formation"><img class="lazyload"
+                      target="_blank" rel="noopener noreferrer" class="la-bonne-formation"><img src="/static/s.png" class="lazyload"
                         data-src="/static/img/startups/la_bonne_formation.jpg" alt="La Bonne Formation"><span>Trouvez
                         une formation en fonction de votre profil ET du marché du travail.</span></a><a href="https://maintenant.pole-emploi.fr/"
-                      target="_blank" rel="noopener noreferrer" class="maintenant"><img class="lazyload" data-src="/static/img/startups/maintenant.png"
+                      target="_blank" rel="noopener noreferrer" class="maintenant"><img  src="/static/s.png" class="lazyload" data-src="/static/img/startups/maintenant.png"
                         alt="Maintenant"><span>Maintenant ! Trouver le bon job en moins de 5mn <strong>Pas de CV.</strong></span></a><a
-                      href="https://memo.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="memo"><img
+                      href="https://memo.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="memo"><img src="/static/s.png"
                         class="lazyload" data-src="/static/img/startups/memo.png" alt="Memo"><span>Mes candidatures en
                         un clin d'oeil</span></a><a href="https://avril.pole-emploi.fr/" target="_blank" rel="noopener noreferrer"
-                      class="avril"><img class="lazyload" data-src="/static/img/startups/avril.svg" alt="Avril"><span>La
+                      class="avril"><img src="/static/s.png" class="lazyload" data-src="/static/img/startups/avril.svg" alt="Avril"><span>La
                         VAE facile. Transformez votre expérience en diplôme reconnu.</span></a><a href="https://clara.pole-emploi.fr/"
-                      target="_blank" rel="noopener noreferrer" class="clara"><img class="lazyload" data-src="/static/img/startups/clara.svg"
+                      target="_blank" rel="noopener noreferrer" class="clara"><img src="/static/s.png" class="lazyload" data-src="/static/img/startups/clara.svg"
                         alt="Clara"><span>Vos aides en un clic. Découvrez les aides et mesures qui vont accélérer votre
                         reprise d'emploi.</span></a></div>
                 </div>
