Update logo + design fixes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -80,7 +80,7 @@
           <div class="form-1">&nbsp;</div>
           <div class="container">
             <div class="beta">&nbsp;</div>
-            <header><a class="logo-lba" href="/"><img src="/static/img/logo/logo-blanc-lba.svg" alt="Retour à l'accueil"
+            <header><a class="logo-lba" href="/"><img src="/static/img/logo/logo-noir-lba.svg" alt="Retour à l'accueil"
                   title="Retour à l'accueil"></a><a class="logo-pe" href="https://www.pole-emploi.fr/" target="_blank"
                 rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre"><img src="/static/img/logo/logo-pe-NB.svg"
                   alt="La Bonne Alternance est un site de Pôle Emploi" title="La Bonne Alternance est un site de Pôle Emploi"></a></header>
@@ -160,7 +160,7 @@
                 <div id="other-startups" class="clearfix">
                   <h2>D'autres services digitaux proposés par Pôle Emploi</h2>
                   <div><a href="https://labonneboite.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-boite"><img src="/static/s.png"
-                        class="lazyload" data-src="/static/img/startups/la_bonne_boite.png" alt="La Bonne Boite"><span>Trouvez
+                        class="lazyload" data-src="/static/img/startups/la_bonne_boite.jpg" alt="La Bonne Boite"><span>Trouvez
                         les entreprises qui embauchent sans déposer d’offres d’emploi !</span></a><a href="https://labonneformation.pole-emploi.fr"
                       target="_blank" rel="noopener noreferrer" class="la-bonne-formation"><img src="/static/s.png" class="lazyload"
                         data-src="/static/img/startups/la_bonne_formation.jpg" alt="La Bonne Formation"><span>Trouvez
