--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -67,6 +67,15 @@
       }
     }
   </script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132488599-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-132488599-1');
+  </script>
 </head>
 
 <body>
