--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -100,7 +100,7 @@
                 <div class="button-container">
                   <div class="loading-dotted">Chargement en cours</div>
                 </div>
-                <div class="recruiter"><a href="https://labonneboite.pole-emploi.fr/connexion-recruteur?origin=labonnealternance">Accès
+                <div class="recruiter"><a href="https://labonneboite.pole-emploi.fr/informations-entreprise/action?origin=labonnealternance">Accès
                     recruteur</a></div>
                 <div class="footer">
                   <ul class="list-unstyled inline-list">
@@ -188,7 +188,7 @@
                 <footer id="global-footer" class="not-fixed">
                   <div class="links">
                     <ul class="list-unstyled inline-list">
-                      <li><a href="https://labonneboite.pole-emploi.fr/connexion-recruteur?origin=labonnealternance">Accès
+                      <li><a href="https://labonneboite.pole-emploi.fr/informations-entreprise/action?origin=labonnealternance">Accès
                           recruteur</a></li>
                       <li><a href="/qui-sommes-nous">Qui sommes-nous ?</a></li>
                       <li class="small"><button title="Consulter notre politique sur les données personnelles">RGPD</button></li>
