MAJ libellé mineure
cf https://valodata.slack.com/archives/C32RN6KQC/p1580391181002700?thread_ts=1580388463.001000&cid=C32RN6KQC

--- a/frontend/public/error_page.html
+++ b/frontend/public/error_page.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="text">
                             <p>On revient tout de suite...</p>
-                            <p>Notre site est momentanément indisponible, on dirait.<br />Le temps de resserrer quelques vis par-ci, par-là, et tout reviendra à la normale.</p>
+                            <p>Notre site est momentanément indisponible ...<br />Le temps de resserrer quelques vis par-ci, par-là, et tout reviendra à la normale.</p>
                         </div>
                     </div>
                 </main>
