update label RGPD to Cookie
Vu avec le service juridique

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -191,7 +191,7 @@
                       <li><a href="https://labonneboite.pole-emploi.fr/informations-entreprise/action?origin=labonnealternance">Accès
                           recruteur</a></li>
                       <li><a href="/qui-sommes-nous">Qui sommes-nous ?</a></li>
-                      <li class="small"><button title="Consulter notre politique sur les données personnelles">RGPD</button></li>
+                      <li class="small"><button title="Consulter notre politique sur les cookies">Cookies</button></li>
                       <li class="small"><a href="/faq">FAQ</a></li>
                       <li class="small"><a href="/conditions-generales-utilisation">CGU</a></li>
                       <li><a href="mailto:l%61bo%6En%65al%74e%72nance@p%6Fle%2Demploi.%66r">Contact</a></li>
