update SEO info

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,7 +39,7 @@
 
   <!-- Open Graph data for facebook -->
   <meta property="og:site_name" content="La Bonne Alternance">
-  <meta property="og:title" content="La Bonne Alternance - Trouvez ici les entreprises qui recrutent régulièrement en alternance">
+  <meta property="og:title" content="La Bonne Alternance - Trouvez votre alternance">
   <meta property="og:type" content="site">
   <meta property="og:url" content="https://labonnealternance.pole-emploi.fr">
   <meta property="og:image" content="https://labonnealternance.pole-emploi.fr/static/img/fd-desktop.jpg">
@@ -89,14 +89,14 @@
           <div class="form-1">&nbsp;</div>
           <div class="container">
             <div class="beta">&nbsp;</div>
-            <header><a class="logo-lba" href="/"><img src="/static/img/logo/logo-blanc-lba.svg" alt="Retour à l'accueil"
-                  title="Retour à l'accueil"></a><a class="logo-pe" href="https://www.pole-emploi.fr/" target="_blank"
-                rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre"><img src="/static/img/logo/logo-pe-NB.svg"
-                  alt="La Bonne Alternance est un site de Pôle Emploi" title="La Bonne Alternance est un site de Pôle Emploi"></a></header>
+            <header>
+              <a class="logo-lba" href="/"><img src="/static/img/logo/logo-blanc-lba.svg" alt="Retour à l'accueil" title="Retour à l'accueil"></a>
+            </header>
             <main>
               <section class="main-landing">
-                <h1 class="introduction"><span>Trouvez ici les entreprises</span><br><span>qui
-                    recrutent <strong>régulièrement</strong> en alternance</span></h1>
+                <h1 class="introduction">
+                  <span>Trouvez votre alternance</span>
+                </h1>
                 <div class="button-container">
                   <div class="loading-dotted">Chargement en cours</div>
                 </div>
