home page wording - server side rendered

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -121,11 +121,7 @@
               {% if render_complete_home %}
               <section class="more">
                 <div class="how-it-works max-size-1000">
-                  <h2 class="big">Comment ça marche ?</h2>
-                  <div class="youtube-video"></div>
-                </div>
-                <div class="how-it-works max-size-1000">
-                  <h2 class="big">La Bonne Alternance</h2>
+                  <h2 class="big">Comment repère-t-on les entreprises ?</h2>
                   <div class="img-right">
                     <p>7 employeurs sur 10 recrutent sans déposer d’offres d’emploi. <br>Il est essentiel dans votre
                       recherche de proposer <br>votre candidature à des entreprises n’ayant pas <br>forcément déposé
@@ -147,21 +143,19 @@
                       postuler.</p>
                     <div class="map"><img src="/static/s.png" class="lazyload" data-src="/static/img/how-it-works/home-map.svg" alt=""></div>
                   </div>
-                  <div class="text-center go-container">
-                    <p>Maximisez vos chances ! Postulez auprès des entreprises qui recrutent régulièrement <br>en
-                      alternance sans forcément avoir déposé d’offres.</p>
-                  </div>
                 </div>
                 <div class="form-2">
                   <div>&nbsp;</div>
+                </div>
+                <div class="how-it-works max-size-1000">
+                  <div class="youtube-video"></div>
                 </div>
                 <div class="who-we-are max-size-1200">
                   <h2 class="big">Qui sommes-nous ?</h2>
                   <div><a class="logo-pe" href="https://www.pole-emploi.fr/" target="_blank" rel="noopener noreferrer"
                       title="Ouverture dans une nouvelle fenêtre"><img src="/static/s.png" class="lazyload img-responsive" data-src="/static/img/logo/pole-emploi-couleur.svg"
                         alt="La Bonne Alternance est un site de Pôle Emploi" title="La Bonne Alternance est un site de Pôle Emploi"></a>
-                    <p>Pôle Emploi innove et propose ce service pour vous permettre de trouver plus facilement des
-                      entreprises proposant régulièrement des contrats en alternance. La Bonne Alternance est une
+                    <p>Pôle Emploi innove et propose ce service pour vous permettre notamment de trouver des entreprises proposant régulièrement des contrats en alternance. La Bonne Alternance est une
                       start-up interne de Pôle Emploi créée et développée par des conseillers.<br><a title="En savoir plus sur les startups Pôle Emploi"
                         href="/qui-sommes-nous">En savoir plus</a></p>
                   </div>
