tag commander tag

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -235,6 +235,7 @@
   {% if latitude %}<script>window.latitude = {{ latitude }};</script>{% endif %}
   {% if jobs %}<script>window.jobs = {{  jobs | safe }};</script>{% endif %}
 
+  <script type="text/javascript" src="https://cdn.tagcommander.com/5234/uat/tc_lba_31.js" async></script>
 </body>
 
 </html>
